--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
     "handlebars": "^4.7.7",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "sqlite": "^4.1.2",
+    "sqlite3": "^5.1.4",
+    "typeorm": "^0.3.12"
   }
 }
