--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.7",
+    "express-validator": "^6.15.0",
     "handlebars": "^4.7.7",
+    "jsonwebtoken": "^9.0.0",
     "nodemon": "^2.0.20",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.4",
